비동기 작업 모듈 리팩토링 및 테스트 개선