@@ -11,8 +11,7 @@ import com.yjlee.search.evaluation.util.PaginationUtils;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Consumer;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -24,18 +23,20 @@ import org.springframework.transaction.annotation.Transactional;
 @Transactional(readOnly = true)
 public class AsyncTaskService {
 
+  private static final List<AsyncTaskStatus> RUNNING_STATUSES =
+      List.of(AsyncTaskStatus.PENDING, AsyncTaskStatus.IN_PROGRESS);
+
   private final AsyncTaskRepository asyncTaskRepository;
   private final ObjectMapper objectMapper;
 
   @Transactional
   public AsyncTask createTask(AsyncTaskType taskType, String initialMessage) {
-    AsyncTask task =
-        AsyncTask.builder()
-            .taskType(taskType)
-            .status(AsyncTaskStatus.PENDING)
-            .progress(0)
-            .message(initialMessage)
-            .build();
+    AsyncTask task = AsyncTask.builder()
+        .taskType(taskType)
+        .status(AsyncTaskStatus.PENDING)
+        .progress(0)
+        .message(initialMessage)
+        .build();
 
     AsyncTask savedTask = asyncTaskRepository.save(task);
     log.info("비동기 작업 생성: ID={}, 타입={}", savedTask.getId(), taskType);
@@ -44,44 +45,38 @@ public class AsyncTaskService {
 
   @Transactional
   public void updateProgress(Long taskId, int progress, String message) {
-    Optional<AsyncTask> taskOpt = asyncTaskRepository.findById(taskId);
-    if (taskOpt.isPresent()) {
-      AsyncTask task = taskOpt.get();
+    executeOnTask(taskId, task -> {
       task.updateProgress(progress, message);
-      asyncTaskRepository.save(task);
       log.debug("작업 진행률 업데이트: ID={}, 진행률={}%, 메시지={}", taskId, progress, message);
-    }
+    });
   }
 
   @Transactional
   public void completeTask(Long taskId, Object result) {
-    Optional<AsyncTask> taskOpt = asyncTaskRepository.findById(taskId);
-    if (taskOpt.isPresent()) {
-      AsyncTask task = taskOpt.get();
+    executeOnTask(taskId, task -> {
       try {
         String resultJson = objectMapper.writeValueAsString(result);
         task.complete(resultJson);
       } catch (Exception e) {
         task.complete(result.toString());
       }
-      asyncTaskRepository.save(task);
       log.info("작업 완료: ID={}, 타입={}", taskId, task.getTaskType());
-    }
+    });
   }
 
   @Transactional
   public void failTask(Long taskId, String errorMessage) {
-    Optional<AsyncTask> taskOpt = asyncTaskRepository.findById(taskId);
-    if (taskOpt.isPresent()) {
-      AsyncTask task = taskOpt.get();
+    executeOnTask(taskId, task -> {
       task.fail(errorMessage);
-      asyncTaskRepository.save(task);
       log.error("작업 실패: ID={}, 타입={}, 에러={}", taskId, task.getTaskType(), errorMessage);
-    }
+    });
   }
 
-  public Optional<AsyncTaskResponse> getTask(Long taskId) {
-    return asyncTaskRepository.findById(taskId).map(this::convertToResponse);
+  private void executeOnTask(Long taskId, Consumer<AsyncTask> action) {
+    asyncTaskRepository.findById(taskId).ifPresent(task -> {
+      action.accept(task);
+      asyncTaskRepository.save(task);
+    });
   }
 
   public AsyncTaskResponse getTaskOrThrow(Long taskId) {
@@ -92,15 +87,15 @@ public class AsyncTaskService {
   }
 
   public AsyncTaskListResponse getRecentTasks(int page, int size) {
-    List<AsyncTask> allTasks =
-        asyncTaskRepository.findByCreatedAtAfterOrderByCreatedAtDesc(
-            LocalDateTime.now().minusDays(7)); // 최근 7일간의 작업들
+    List<AsyncTask> allTasks = asyncTaskRepository
+        .findByCreatedAtAfterOrderByCreatedAtDesc(LocalDateTime.now().minusDays(7));
 
     PaginationUtils.PagedResult<AsyncTask> pagedResult =
         PaginationUtils.paginate(allTasks, page, size);
 
-    List<AsyncTaskResponse> taskResponses =
-        pagedResult.getContent().stream().map(this::convertToResponse).collect(Collectors.toList());
+    List<AsyncTaskResponse> taskResponses = pagedResult.getContent().stream()
+        .map(this::convertToResponse)
+        .toList();
 
     return AsyncTaskListResponse.builder()
         .tasks(taskResponses)
@@ -114,17 +109,14 @@ public class AsyncTaskService {
   }
 
   public List<AsyncTaskResponse> getRunningTasks() {
-    List<AsyncTaskStatus> runningStatuses =
-        List.of(AsyncTaskStatus.PENDING, AsyncTaskStatus.IN_PROGRESS);
-
-    return asyncTaskRepository.findByStatusInOrderByCreatedAtDesc(runningStatuses).stream()
+    return asyncTaskRepository.findByStatusInOrderByCreatedAtDesc(RUNNING_STATUSES)
+        .stream()
         .map(this::convertToResponse)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public boolean hasRunningTask(AsyncTaskType taskType) {
-    return asyncTaskRepository.existsByTaskTypeAndStatusIn(
-        taskType, List.of(AsyncTaskStatus.PENDING, AsyncTaskStatus.IN_PROGRESS));
+    return asyncTaskRepository.existsByTaskTypeAndStatusIn(taskType, RUNNING_STATUSES);
   }
 
   private AsyncTaskResponse convertToResponse(AsyncTask task) {
